--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,16 @@
 language: cpp
 
-compiler: clang
+compiler:
+  - gcc
+  - clang
+
+before_install:
+  - if [ "$CXX" == "g++" ]; then sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y; fi
+  - sudo apt-get update -qq    
+  
+  
+install:
+  - if [ "$CXX" == "g++" ]; then sudo apt-get install g++-4.8; fi
+  - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8"; fi    
 
 script: make test
