--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,13 @@ before_install:
   
   
 install:
-  - if [ "$CXX" == "g++" ]; then sudo apt-get install g++-4.8; fi
-  - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8"; fi    
+  - if [ "$CXX" == "g++" ]; then sudo apt-get install -qq g++-4.8; fi
+  - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8"; fi
+  - sudo apt-get install -y lcov
+  - gem install coveralls-lcov
 
 script: make test
+
+after_success:
+  - cd tests && make coverage
+  - coveralls-lcov tests/coverage.info
