--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,12 @@ before_install:
   
 install:
   - if [ "$CXX" == "g++" ]; then sudo apt-get install -qq g++-4.8; fi
-  - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8"; fi
-  - sudo apt-get install -y lcov
-  - gem install coveralls-lcov
+  - if [ "$CXX" == "g++" ]; then export CXX="g++-4.8"; fi
+  - if [ "$CXX" == "clang++" ; then sudo apt-get install -y lcov; fi
+  - if [ "$CXX" == "clang++" ; then gem install coveralls-lcov; fi
 
 script: make test
 
 after_success:
-  - cd tests && make coverage
-  - coveralls-lcov tests/coverage.info
+  - if [ "$CXX" == "clang++" ]; then make coverage; fi
+  - if [ "$CXX" == "clang++" ]; coveralls-lcov tests/coverage.info; fi
