Change the way coverage report is generated so that coveralls can find the source files.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -8,18 +8,9 @@ all: $(targets)
 test: $(targets)
 	@$(foreach target, $(targets), ./$(target);)
 
-coverage: test
-	lcov -o coverage.info --capture --directory .
-	lcov -r coverage.info /usr/include/\* -o coverage.info
-
-covhtml: coverage
-	genhtml -o coverage coverage.info
-
 clean:
-	@rm -f $(targets)
-	@rm -f *.gcov
-	@rm -f *.gcno
-	@rm -f *.gcda
-	@rm -f coverage.info
-	@rm -rf *.dSYM
-	@rm -rf coverage
+	rm -f $(targets)
+	rm -f *.gcov
+	rm -f *.gcno
+	rm -f *.gcda
+	rm -rf *.dSYM
