--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,4 @@ script: make test
 
 after_success:
   - if [ "$CXX" == "clang++" ]; then make coverage; fi
-  - if [ "$CXX" == "clang++" ]; coveralls-lcov coverage.info; fi
+  - if [ "$CXX" == "clang++" ]; then coveralls-lcov coverage.info; fi
