And two brackets here. what is wrong with me xD

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ before_install:
 install:
   - if [ "$CXX" == "g++" ]; then sudo apt-get install -qq g++-4.8; fi
   - if [ "$CXX" == "g++" ]; then export CXX="g++-4.8"; fi
-  - if [ "$CXX" == "clang++" ; then sudo apt-get install -y lcov; fi
-  - if [ "$CXX" == "clang++" ; then gem install coveralls-lcov; fi
+  - if [ "$CXX" == "clang++" ] ; then sudo apt-get install -y lcov; fi
+  - if [ "$CXX" == "clang++" ] ; then gem install coveralls-lcov; fi
 
 script: make test
 
